--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                     </strong>
                 </ul>
                 <br/>
-                <a href="copamerica.html" >Más información sobre la Copa América</a>
+                <a href="PFC_CA.CSS" >Más información sobre la Copa América</a>
 
             </article>
             <article id="andares">
